2001-07-06 Danny Smith <dannysmith@users.sourceforge.net>
 
	* include/basetsd.h (#include <_mingw.h>): Remove.
	(__int64): Define.

2001-06-28 Danny Smith <dannysmith@users.sourceforge.net>

	* include/wingdi.h (AC_SRC_OVER): Add define.
	(struct _BLENDFUNCTION): Add.

2001-06-28 Danny Smith <dannysmith@users.sourceforge.net>

	* include/shlobj.h:  Add BIF_* defines.

2001-06-27 Danny Smith <dannysmith@users.sourceforge.net>

	* include/winerror.h (E_PENDING): Add error code define.

2001-06-27 Danny Smith <dannysmith@users.sourceforge.net>

	* include/basetsd.h (#include <_mingw.h>): Add directive.

2001-06-25 Danny Smith <dannysmith@users.sourceforge.net>

	* include/winbase.h(InterlockedCompareExchange): Change args
	and return value from PVOID to LONG.
	(InterlockedExchange): Change first arg to LPLONG.
	(InterlockedCompareExchangePointer): New macro.
	(InterlockedExchangePointer): New macro.

2001-06-19 Danny Smith <dannysmith@users.sourceforge.net>

	* lib/kernel32.def: Add LanguageGroup and UILanguage symbols.
	Thanks to Kevin Chase <kevincha99@hotmail.com>. 

2001.06.11  TAMURA Kent  <tkent@users.sourceforge.net>

	* objidl.h (IMalloc::ReAlloc()): Correct declaration.
	(IMalloc::Free()): Ditto.

2001-06-11 Danny Smith <dannysmith@users.sourceforge.net>

	* include/shlobj.h (REGSTR_PATH_EXPLORER): Unicode it. 
	(REGSTR_PATH_SPECIAL_FOLDERS): Ditto.
	* include/regstr.h (REGSTR_PATH_EXPLORER): Add #ifndef guard. 

2001-06-11  Mattia Barbon  <mbarbon@dsi.unive.it>

	* include/shlobj.h (struct _browseinfo): UNICODE it.
	(SHBrowseForFolder): Ditto.
	(SHGetPathFromIDList): Ditto.

2001.06.11  Earnie Boyd  <earnie@users.sourceforge.net>

	* include/basetsd.h: RC_INVOKED protection and realignment.
	Thanks to: Colin Peters <colinpeters@users.sourceforge.net>

2001.06.06  Earnie Boyd  <earnie@users.sourceforge.net>

	* Makefile.in (bindist): Reassign value of exec_prefix on make command
	line. 

Tue May 22 18:58:27 2001  Christopher Faylor <cgf@cygnus.com>
